--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.0.11",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
